<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StudentGroupActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingTop="5dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_marginBottom="5dp"
                app:srcCompat="@drawable/students" />
            <TextView
                android:id="@+id/imgTextGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="@dimen/img_text_padding"
                android:textSize="@dimen/img_text_size"
                android:textStyle="bold"
                android:text="" />
            <TextView
                android:id="@+id/imgTextFaculty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:padding="@dimen/img_text_padding"
                android:textSize="@dimen/img_text_size"
                android:textStyle="bold"
                android:text="" />
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/group_number"
                android:textSize="@dimen/text_size" />
            <EditText
                android:id="@+id/groupNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.5"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text=""
                android:textColor="@color/text_hint_color"
                android:textSize="@dimen/text_size" />
        </LinearLayout>
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/faculty"
            android:textSize="@dimen/text_size" />
        <EditText
            android:id="@+id/faculty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text=""
            android:textColor="@color/text_hint_color"
            android:textSize="@dimen/text_size" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="18dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edu_level"
                    android:textSize="@dimen/text_size"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="25dp"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/bacRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bac" />

                    <RadioButton
                        android:id="@+id/magRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mag" />
                </RadioGroup>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/additional"
                    android:textSize="@dimen/text_size"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="25dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/hasContracts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/has_contracts" />

                    <CheckBox
                        android:id="@+id/hasPrivilegedStudents"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/has_privilege" />
                </LinearLayout>
            </TableRow>


        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/delete"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:backgroundTint="#B24242"
                android:text="del" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <Button
                android:id="@+id/groupStudentList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_list" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/ok"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/ok" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>