<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingTop="5dp"
    android:paddingRight="30dp"
    android:paddingBottom="10dp"
    tools:context=".StudentGroupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/group_number"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/groupNumberInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.5"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text=""
                android:textColor="@color/text_hint_color"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/faculty"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/facultyInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text=""
            android:textColor="@color/text_hint_color"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/ok" />

    </LinearLayout>
</ScrollView>